infra/k8s/employee-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-service
  template:
    metadata:
      labels:
        app: employee-service
    spec:
      containers:
        - name: employee-service
          image: moideenshacp/farlink-employee-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  selector:
    app: employee-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
